# ChatbotApi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chatbot_api.conf  gunicorn.conf.py  pyproject.toml  requirements.txt  run.sh  uvicorn_log.json
.github/workflows/: code_check.yaml  unittest.yaml  workflow.yaml
docs/: api_docs.md
src/: ark_sign.py  client_wrapper.py  clients.py  log_formatter.py  main.py  retrieve_text.py  schema.py  utils.py
src/routes/: completion.py  deprecated.py  models.py  vector.py
tests/: test_api.py
