[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = ''
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.9'
# 作为包安装时的依赖
dependencies = []

[[project.authors]]
name = 'ds'
email = 'ds@moojing.com'

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"