[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = 'chatbot_api'
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.9'
# 作为包安装时的依赖
dependencies = []

[[project.authors]]
name = 'ds'
email = 'ds@moojing.com'

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100